--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
+    <string name="reports_fragment_label">Reports Fragment</string>
     <string name="next">Next</string>
 
     <string name="hello_first_fragment">This application will allow you to input your temperature as well as the date and time of recording so that you can better share with your doctor a record of your fevers.</string>
